# weather

./: Cargo.toml  readme.md
src/: camera_plugin.rs  main.rs  render_plugin.rs  serde.rs
