[package]
name = "netatmo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22",default-features = true, features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
bevy = {version = "0.12.1",default-features = false,  features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_text", "png", "multi-threaded", "default_font", "x11"]}
crossbeam = "0.8.2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

